# coresense_vampire

./: .gitignore  CMakeLists.txt  package.xml
action/: Vampire.action
src/: vampire_node.cpp
src/Inferences/: BoolEqToDiseq.hpp  FunctionEvaluation.cpp
src/Kernel/: ApplicativeHelper.hpp  TermIterators.hpp
src/Lib/: Environment.cpp  Environment.hpp  TimeCounter.cpp  fdstream.hpp
src/Lib/Sys/: SyncPipe.cpp
src/Shell/: Options.cpp  UIHelper.cpp
